# daily-paper-scraper

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  vercel.json
api/: index.py  notion_api.py
daily_paper_scraper/: config.py  filter.py  focus_tracker.py  models.py  notion_sync.py  utils.py
daily_paper_scraper/scrapers/: arxiv_scraper.py  hf_scraper.py
docs/: index.html
scripts/: add_properties.py  archive_other.py  backfill_enrichment.py  build_site.py  bulk_sync.py  cleanup_papers.py  create_roadmap_page.py  fetch_and_filter.py  seed_seminal.py  setup_notion_db.py  sync_notion.py
web/: app.py
web/static/: style.css
web/templates/: index.html
